# device_soc_st

./: BUILD.gn  NOTICE  OAT.xml
common/platform/: BUILD.gn  NOTICE
common/platform/adc/: BUILD.gn  Makefile  stm32mp1_adc.c  stm32mp1_adc.h
common/platform/gpio/: BUILD.gn  Makefile  stm32mp1_gpio.c  stm32mp1_gpio.h
common/platform/i2c/: BUILD.gn  Makefile  stm32mp1_i2c.c  stm32mp1_i2c.h
common/platform/iwdg/: BUILD.gn  Makefile  stm32mp1_iwdg.c
common/platform/pwm/: BUILD.gn  Makefile  stm32mp1_pwm.c  stm32mp1_pwm.h
common/platform/rng/: BUILD.gn  Makefile  stm32mp1_rng.c
common/platform/smp/: BUILD.gn  stm32mp1_smp.c  stm32mp1_smp.h
common/platform/spi/: BUILD.gn  Makefile  stm32mp1_spi.c  stm32mp1_spi.h
common/platform/stm32mp1xx_hal/: BUILD.gn  Makefile
common/platform/stm32mp1xx_hal/STM32MP1xx_HAL_Driver/Inc/: stm32mp1xx_hal_qspi.h
common/platform/stm32mp1xx_hal/STM32MP1xx_HAL_Driver/Src/: stm32mp1xx_hal_adc.c  stm32mp1xx_hal_dac.c  stm32mp1xx_hal_dfsdm.c  stm32mp1xx_hal_qspi.c  stm32mp1xx_hal_rtc.c  stm32mp1xx_hal_rtc_ex.c  stm32mp1xx_hal_sai.c  stm32mp1xx_hal_sd.c
common/platform/uart/: BUILD.gn  KRecvBuf.c  KRecvBuf.h  Makefile  stm32mp1_uart.c  stm32mp1_uart_hw.c  stm32mp1_uart_hw.h
common/platform/wlan/: BUILD.gn
stm32f407zg/: BUILD.gn
stm32f407zg/uniproton/: BUILD.gn  config.gni
stm32f407zg/uniproton/board/: BUILD.gn  board.c  dprintf.c  prt_buildef.h  prt_config.h  rtos.ld
stm32f407zg/uniproton/board/common/: BUILD.gn  stm32f4xx.h  system_stm32f4xx.c
stm32f407zg/uniproton/board/common/STM32F4x7_ETH_Driver/inc/: stm32f4x7_eth.h  stm32f4x7_eth_conf.h
stm32f407zg/uniproton/board/common/STM32F4x7_ETH_Driver/src/: stm32f4x7_eth.c
stm32f407zg/uniproton/board/common/STM32F4xx_StdPeriph_Driver/src/: misc.c  stm32f4xx_fsmc.c  stm32f4xx_gpio.c  stm32f4xx_syscfg.c  stm32f4xx_usart.c
stm32f407zg/uniproton/board/driver/: BUILD.gn
stm32f407zg/uniproton/board/driver/ethernet/: lan8720.c  lan8720.h
stm32f407zg/uniproton/board/driver/spi/: spi.c  spi.h
stm32f407zg/uniproton/board/driver/system/: system.h
stm32f407zg/uniproton/board/driver/usart/: usart.c  usart.h
stm32f407zg/uniproton/board/driver/w25qxx/: w25qxx.c  w25qxx.h
stm32f407zg/uniproton/board/fs/: BUILD.gn  fs_porting.c
stm32f407zg/uniproton/board/hdf_config/: BUILD.gn  default.hcs  default_device_info.hcs
stm32f407zg/uniproton/board/hdf_platform/: BUILD.gn
stm32f407zg/uniproton/board/hdf_platform/include/: hal_gpio.h
stm32f407zg/uniproton/board/hdf_platform/src/: ethernet_init.c  fs_init.c  gpio_stm32f407.c  i2c_stm32f407.c
stm32f407zg/uniproton/board/lwip/: BUILD.gn  ethernetif.c  ethernetif.h  lwip.c  lwip.h
stm32f407zg/uniproton/hals/: hal_trace.h
stm32f407zg/uniproton/hals/cmsis/: BUILD.gn  cmsis_os.h  cmsis_os2.h  cmsis_uniproton.c  hos_cmsis_adp.h
stm32f407zg/uniproton/hals/utils/file/: BUILD.gn
stm32f407zg/uniproton/hals/utils/file/src/: hal_file.c
stm32f4xx/: BUILD.gn  NOTICE
stm32f4xx/sdk/: BUILD.gn
stm32f4xx/sdk/hals/utils/file/: BUILD.gn  hal_file.c
stm32mp1xx/sdk_linux/: BUILD.gn
stm32mp1xx/sdk_liteos/: BUILD.gn
stm32mp1xx/sdk_liteos/hdf_config/: BUILD.gn
stm32mp1xx/sdk_liteos/hdf_config/device_info/: device_info.hcs
stm32mp1xx/sdk_liteos/hdf_config/wifi/: wlan_platform.hcs
