# Copyright (c) 2021 Nanjing Xiaoxiongpai Intelligent Technology Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//drivers/hdf_core/adapter/khdf/liteos/hdf.gni")

group("drivers") {
  deps = [
    "adc",
    "gpio",
    "i2c",
    "iwdg",
    "pwm",
    "rng",
    "smp",
    "spi",
    "stm32mp1xx_hal",
    "uart",
    "wlan:wifi_firmware",
  ]
}

config("public") {
  lib_dirs = [ "//device/soc/st/common/platform/libs/ohos/llvm/stm32mp1xx" ]
  ldflags = [ "-Wl,--push-state,--whole-archive" ]

  ldflags += [ "-lltdc" ]
  if (defined(LOSCFG_DRIVERS_MMC)) {
    ldflags += [ "-lmmc" ]
  }
  if (defined(LOSCFG_DRIVERS_HDF_WIFI)) {
    ldflags += [ "-lhdf_vendor_wifi" ]
  }
  if (defined(LOSCFG_DRIVERS_HDF_WIFI) && defined(LOSCFG_DRIVERS_HI3881)) {
    ldflags += [ "-lhi3881" ]
  }
}
