# Copyright (c) 2022 Huawei Device Co., Ltd. All rights reserved.
#
# Redistribution and use in source and binary forms, with or without modification,
# are permitted provided that the following conditions are met:
#
# 1. Redistributions of source code must retain the above copyright notice, this list of
#    conditions and the following disclaimer.
#
# 2. Redistributions in binary form must reproduce the above copyright notice, this list
#    of conditions and the following disclaimer in the documentation and/or other materials
#    provided with the distribution.
#
# 3. Neither the name of the copyright holder nor the names of its contributors may be used
#    to endorse or promote products derived from this software without specific prior written
#    permission.
#
# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
# "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO,
# THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR
# PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR
# CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,
# EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
# PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS;
# OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,
# WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR
# OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF
# ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

COMMON_DIR = get_path_info(".", "abspath")

config("stm32_config") {
  include_dirs = [
    ".",
    "$COMMON_DIR/STM32F4x7_ETH_Driver/inc",
    "$COMMON_DIR/STM32F4xx_StdPeriph_Driver/inc",
    "//third_party/cmsis/CMSIS/Core/Include",
  ]
}

static_library("common") {
  sources = [
    "$COMMON_DIR/STM32F4x7_ETH_Driver/src/stm32f4x7_eth.c",
    "$COMMON_DIR/STM32F4xx_StdPeriph_Driver/src/misc.c",
    "$COMMON_DIR/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_adc.c",
    "$COMMON_DIR/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_can.c",
    "$COMMON_DIR/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_crc.c",
    "$COMMON_DIR/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_cryp.c",
    "$COMMON_DIR/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_cryp_aes.c",
    "$COMMON_DIR/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_cryp_des.c",
    "$COMMON_DIR/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_cryp_tdes.c",
    "$COMMON_DIR/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_dac.c",
    "$COMMON_DIR/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_dbgmcu.c",
    "$COMMON_DIR/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_dcmi.c",
    "$COMMON_DIR/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_dma.c",
    "$COMMON_DIR/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_dma2d.c",
    "$COMMON_DIR/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_exti.c",
    "$COMMON_DIR/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_flash.c",
    "$COMMON_DIR/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_flash_ramfunc.c",
    "$COMMON_DIR/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_fsmc.c",
    "$COMMON_DIR/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_gpio.c",
    "$COMMON_DIR/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_hash.c",
    "$COMMON_DIR/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_hash_md5.c",
    "$COMMON_DIR/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_hash_sha1.c",
    "$COMMON_DIR/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_i2c.c",
    "$COMMON_DIR/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_iwdg.c",
    "$COMMON_DIR/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_ltdc.c",
    "$COMMON_DIR/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_pwr.c",
    "$COMMON_DIR/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_rcc.c",
    "$COMMON_DIR/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_rng.c",
    "$COMMON_DIR/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_rtc.c",
    "$COMMON_DIR/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_sai.c",
    "$COMMON_DIR/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_sdio.c",
    "$COMMON_DIR/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_spi.c",
    "$COMMON_DIR/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_syscfg.c",
    "$COMMON_DIR/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_tim.c",
    "$COMMON_DIR/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_usart.c",
    "$COMMON_DIR/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_wwdg.c",
    "$COMMON_DIR/stm32f4xx_it.c",
    "$COMMON_DIR/system_stm32f4xx.c",
  ]
  configs += [ ":stm32_config" ]
}
